--- a/style.css
+++ b/style.css
@@ -236,3 +236,19 @@ ul {
     --lightness: 95%;
     background: hsla(var(--hsl), 0.1);
 }
+
+/* css to image */
+.imgTest{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-top: -8px;
+}
+
+/* css to divider */
+
+.divider {
+    border: 2px solid #2e2e2e;
+    height: 50px;
+}
