--- a/style.css
+++ b/style.css
@@ -8,11 +8,37 @@
   padding: 0;
 }
 
+/* START */ 
+
+/* width */
+::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  /* track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* handle */
+  ::-webkit-scrollbar-thumb {
+    background: #454a4d; 
+    border-radius: 10px;
+  }
+  
+  /* handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #444c4c; 
+  }
+
+/* OVER */
+
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    /* background-color: #212121; */
-    background-color: #212121;
+    /* background-color: ##202324; */
+    background-color: #202324;
 
 }
 
