--- a/style.css
+++ b/style.css
@@ -363,22 +363,6 @@ ul {
     width: 100px;
 }
 
-/* tooltip */
-
-.tooltip .tooltiptext {
-    visibility: hidden;
-    width: 200px;
-    background-color: transparent;
-    color: whitesmoke;
-    text-align: center;
-    position: absolute;
-    z-index: 1;
-}
-
-.tooltip:hover .tooltiptext {
-    visibility: visible;
-}
-
 /* card heading X */
 
 .card__heading2 {
@@ -391,4 +375,10 @@ ul {
     font-size: 20px;
     font-weight: 600;
     text-align: center;
+}
+
+/* background */
+
+.game_card {
+    background-image: url("/assets/discord.png");
 }
