--- a/style.css
+++ b/style.css
@@ -571,9 +571,10 @@ ul {
     border-radius: 15px;
     padding: 1.5em;
     display: grid;
-    grid-template-rows: auto auto 1fr; /* Updated grid-template-rows */
-    gap: 0.5em; /* Adjust gap as needed */
+    grid-template-rows: auto auto 1fr;
+    gap: 0.5em;
     color: white;
+    background: #212121;
     border: 2px solid #00000036;
     box-shadow: #000000 ;
 }
@@ -651,13 +652,13 @@ ul {
 
 .ip {
     display: grid;
-    place-items: center; /* Center-align the IP */
-    margin-top: 1em; /* Add some spacing between IP and status */
-    background-color: #262626; /* Set your desired background color */
-    border-radius: 6px; /* Add border-radius for rounded corners */
-    padding: 10px; /* Add padding for better styling */
-    color: white; /* Set text color */
-    cursor: pointer; /* Change cursor to indicate it's clickable */
+    place-items: center; 
+    margin-top: 1em; 
+    background-color: #262626; 
+    border-radius: 6px; 
+    padding: 10px; 
+    color: white; 
+    cursor: pointer; 
 }
 
 .ip4 {
@@ -686,7 +687,7 @@ ul {
 
 
 
-/* Your existing styles */
+
 
 .status {
     margin-bottom: 0.5em;
@@ -698,8 +699,6 @@ ul {
     color: white;
 }
 
-/* Continue with your other styles */
-
 
 
 
@@ -707,6 +706,87 @@ ul {
 
 .description {
     display: grid;
-    place-items: start; /* Align the description to the left */
+    place-items: start; 
 }
+
+
+
+
+
+
+
+
+
+
+
+/* thanks w3schools */
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+  }
+  
+  /* Add Animation */
+  @-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+  }
+  
+  @keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+  }
+  
+  /* The Close Button */
+  .close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .modal-header {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+  }
+  
+  .modal-body {padding: 2px 16px;}
+  
+  .modal-footer {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+  }
 
