--- a/test/test.css
+++ b/test/test.css
@@ -135,6 +135,13 @@ a {
     transition: 0.2s all ease-in-out;
 }
 
+.navElements li > a {
+    text-decoration: none;
+    color: inherit;
+    display: flex;
+    align-items: center;
+}
+
 .navElements li > svg {
     font-size: 20px;
 }
@@ -209,7 +216,7 @@ ul {
   }
   
 .card {
-    --flow-space: 0.5em;A
+    --flow-space: 0.5em;
     --hsl: var(--hue), var(--saturation), var(--lightness);
     flex: 1 1 14rem;
     padding: 1.5em 2em;
@@ -555,3 +562,231 @@ ul {
     width: 18px;
     height: auto;
 }
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Adjust minmax width as needed */
+    gap: 20px;
+    justify-content: center; /* Center-align the boxes */
+    align-items: center;
+    margin: 50px;
+}
+
+.box {
+    width: 100%;
+    max-width: 25rem;
+    border-radius: 15px;
+    padding: 1.5em;
+    display: grid;
+    grid-template-rows: auto auto 1fr; /* Updated grid-template-rows */
+    gap: 0.5em; /* Adjust gap as needed */
+    color: white;
+    border: 2px solid #00000036;
+    box-shadow: #000000 ;
+}
+
+.title1 {
+    color: rgb(162, 72, 185);
+}
+
+.title2 {
+    color: rgb(185, 72, 72);
+}
+
+.title3 {
+    color: yellow;
+}
+.title4 {
+    color: rgb(197, 182, 42);
+}
+.title5 {
+    color: green;
+}
+.title6 {
+    color: blue;
+}
+
+.title7 {
+    color: royalblue;
+}
+
+.title8 {
+    color: darkorange;
+}
+
+.title9 {
+    color: deeppink;
+}
+
+.title10 {
+    color: royalblue;
+}
+
+.title11 {
+    color: darkorange;
+}
+
+.title12 {
+    color: deeppink;
+}
+
+.title13 {
+    color: royalblue;
+}
+
+.title14 {
+    color: darkorange;
+}
+
+.title15 {
+    color: deeppink;
+}
+.title16 {
+    color: royalblue;
+}
+
+.title17 {
+    color: darkorange;
+}
+
+.title18 {
+    color: deeppink;
+}
+.title19 {
+    color: royalblue;
+}
+
+.ip {
+    display: grid;
+    place-items: center; /* Center-align the IP */
+    margin-top: 1em; /* Add some spacing between IP and status */
+    background-color: #262626; /* Set your desired background color */
+    border-radius: 6px; /* Add border-radius for rounded corners */
+    padding: 10px; /* Add padding for better styling */
+    color: white; /* Set text color */
+    cursor: pointer; /* Change cursor to indicate it's clickable */
+}
+
+.ip4 {
+    margin-top: 32px;
+}
+.ip6 {
+    margin-top: 32px
+}
+
+.ip7 {
+    margin-top: 32px;
+}
+
+.ip8 {
+    margin-top: 32px;
+}
+
+.ip9 {
+    margin-top: 32px;
+}
+
+.ip10 {
+    margin-top: 32px;
+}
+
+
+
+
+/* Your existing styles */
+
+.status {
+    margin-bottom: 0.5em;
+    width: fit-content;
+    display: inline;
+    padding: 5px 10px;
+    border-radius: 15px;
+    background-color: #262626;
+    color: white;
+}
+
+/* Continue with your other styles */
+
+
+
+
+
+
+.description {
+    display: grid;
+    place-items: start; /* Align the description to the left */
+}
+
+
+
+/* thanks w3schools */
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+  }
+  
+  /* Add Animation */
+  @-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+  }
+  
+  @keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+  }
+  
+  /* The Close Button */
+  .close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .modal-header {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+  }
+  
+  .modal-body {padding: 2px 16px;}
+  
+  .modal-footer {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+  }
+
